Rework issue structure